--- a/na.html
+++ b/na.html
@@ -1,1 +1,11 @@
-<h1>Иди нахуй</h1>
+<h1>Иди нахуй, даун безмозглый</h1>
+<a>и засунь свою рашку себе в очко, и лижи очко у своего путина</a>
+<a>и пока ты смеешься гибнут люди, а ты мразота мелкая даже против этого ничего не делаешь</a>
+<a>и я прекрасно видел что ты писал карандашу</a>
+<a>чел, то что ты любишь рашку ничего не решает, хотя не решает, уебан ты или мразь</a>
+<a>ты хоть раз видел что в запорожье и кременчуке происходит? а в мариуполе и бахмуте?</a>
+<a>это все сделано вашими ВОЙСКАМИ</a>
+<a>такимиже очколизами</a>
+<a>И ТЫ МРАЗЬ ПРОТИВ ЭТОГО НИЧЕГО НЕ ДЕЛАЕШЬ</a>
+<a>и я вот не понимаю вашу логику, вы кричите что вы братский народ с нами, а когда в новостях пишут то что бахмут стал 2 мариуполем вы радуйтесь?</a>
+<a>ДА ВЫ ПРОСТО ЗА ПУКИНА НА ВСЕ ГОТОВЫ ДАУНЫ ВЫ БЕЗМОЗГЛЫЕ, ОТКРОЙТЕ ГЛАЗА</a>
