--- a/na.html
+++ b/na.html
@@ -1,11 +1,12 @@
 <h1>Иди нахуй, даун безмозглый</h1>
-<a>и засунь свою рашку себе в очко, и лижи очко у своего путина</a>
-<a>и пока ты смеешься гибнут люди, а ты мразота мелкая даже против этого ничего не делаешь</a>
-<a>и я прекрасно видел что ты писал карандашу</a>
-<a>чел, то что ты любишь рашку ничего не решает, хотя не решает, уебан ты или мразь</a>
-<a>ты хоть раз видел что в запорожье и кременчуке происходит? а в мариуполе и бахмуте?</a>
-<a>это все сделано вашими ВОЙСКАМИ</a>
-<a>такимиже очколизами</a>
-<a>И ТЫ МРАЗЬ ПРОТИВ ЭТОГО НИЧЕГО НЕ ДЕЛАЕШЬ</a>
-<a>и я вот не понимаю вашу логику, вы кричите что вы братский народ с нами, а когда в новостях пишут то что бахмут стал 2 мариуполем вы радуйтесь?</a>
-<a>ДА ВЫ ПРОСТО ЗА ПУКИНА НА ВСЕ ГОТОВЫ ДАУНЫ ВЫ БЕЗМОЗГЛЫЕ, ОТКРОЙТЕ ГЛАЗА</a>
+<p>и засунь свою рашку себе в очко, и лижи очко у своего путина</p>
+<p>и пока ты смеешься гибнут люди, а ты мразота мелкая даже против этого ничего не делаешь</p>
+<p>и я прекрасно видел что ты писал карандашу</p>
+<p>чел, то что ты любишь рашку ничего не решает, хотя не решает, уебан ты или мразь</p>
+<p>ты хоть раз видел что в запорожье и кременчуке происходит? а в мариуполе и бахмуте?</p>
+<p>это все сделано вашими ВОЙСКАМИ</p>
+<p>такимиже очколизами</p>
+<p>И ТЫ МРАЗЬ ПРОТИВ ЭТОГО НИЧЕГО НЕ ДЕЛАЕШЬ</p>
+<p>и я вот не понимаю вашу логику, вы кричите что вы братский народ с нами, а когда в новостях пишут то что бахмут стал 2 мариуполем вы радуйтесь?</p>
+<p>ДА ВЫ ПРОСТО ЗА ПУКИНА НА ВСЕ ГОТОВЫ ДАУНЫ ВЫ БЕЗМОЗГЛЫЕ, ОТКРОЙТЕ ГЛАЗА</p>
+<img href="IMG_20230101_213629_181.jpg">
