--- a/na.html
+++ b/na.html
@@ -9,4 +9,4 @@
 <p>И ТЫ МРАЗЬ ПРОТИВ ЭТОГО НИЧЕГО НЕ ДЕЛАЕШЬ</p>
 <p>и я вот не понимаю вашу логику, вы кричите что вы братский народ с нами, а когда в новостях пишут то что бахмут стал 2 мариуполем вы радуйтесь?</p>
 <p>ДА ВЫ ПРОСТО ЗА ПУКИНА НА ВСЕ ГОТОВЫ ДАУНЫ ВЫ БЕЗМОЗГЛЫЕ, ОТКРОЙТЕ ГЛАЗА</p>
-<img href="IMG_20230101_213629_181.jpg">
+<img src="IMG_20230101_213629_181.jpg">
